fixing layout of page overlapping on each other

--- a/public/assets/css/easyui-tuna.css
+++ b/public/assets/css/easyui-tuna.css
@@ -1,58 +1,162 @@
-.textbox .textbox-text{
-	color:black;
+.textbox .textbox-text {
+	color: black;
 }
-.datagrid-view .datagrid-editable-input{
-	color:black;
+
+.datagrid-view {
+	position: relative;
+	overflow: hidden;
 }
-.datagrid-header td, .datagrid-body td, .datagrid-footer td{
+
+.datagrid{
+	width: 100%;
+	height: 100%}
+
+.datagrid-view1,
+.datagrid-view2 {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+}
+
+.datagrid-view1 {
+	left: 0;
+}
+
+.datagrid-view2 {
+	right: 0;
+}
+/* 
+.datagrid .panel-body {
+	overflow: hidden;
+	position: relative;
+} */
+
+.datagrid-mask {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	opacity: 0.3;
+	filter: alpha(opacity=30);
+	display: none;
+}
+
+.datagrid-mask-msg {
+	position: absolute;
+	top: 50%;
+	margin-top: -20px;
+	padding: 10px 5px 10px 30px;
+	width: auto;
+	height: 16px;
+	border-width: 2px;
+	border-style: solid;
+	display: none;
+}
+
+.datagrid-empty {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 25px;
+	line-height: 25px;
+	text-align: center;
+}
+
+.datagrid-sort-icon {
+	padding: 0;
+	display: none;
+}
+
+.datagrid-view .datagrid-editable-input {
+	color: black;
+}
+
+.datagrid-header {
+    overflow: hidden;
+    cursor: default;
+}
+.datagrid-header td,
+.datagrid-body td,
+.datagrid-footer td {
 	padding: 10px 8px;
 	border-style: solid;
 	border-color: #DDDDE4;
 	border-left: 0px;
-	border-right:0px;
+	border-right: 0px;
 }
-.panel{
-	border-radius: 0px 0px 0px 0px;
+
+.panel {
 	box-shadow: none !important;
+	overflow: hidden;
+	text-align: left;
+	margin: 0;
+	border: 0;
+	-moz-border-radius: 0 0 0 0;
+	-webkit-border-radius: 0 0 0 0;
+	border-radius: 0 0 0 0;
 }
-.l-btn-plain{
+
+.l-btn-plain {
 	float: right;
 }
-.panel-header, .panel-body{
-	border:none;
+
+.panel-header,
+.panel-body {
+	border: none;
 }
-#tb{
-	height:auto; 
-	overflow:hidden; 
-	padding:10px 8px;
+
+#tb {
+	height: auto;
+	overflow: hidden;
+	padding: 10px 8px;
 }
-.datagrid-header, .datagrid-td-rownumber{
+
+.datagrid-header,
+.datagrid-td-rownumber {
 	font-weight: bold;
-  background: white;
+	background: white;
 }
-.l-btn-text{
-	color:rgb(113, 113, 113);
-	font-size:14px;
+
+.l-btn-text {
+	color: rgb(113, 113, 113);
+	font-size: 14px;
 }
-.datagrid-toolbar, .datagrid-pager{
+
+.datagrid-toolbar,
+.datagrid-pager {
 	background-color: white;
 }
+
 .l-btn-plain:hover {
-  background: transparent;
-  color: #00438a;
-  border-radius: 4px;
-  margin: 0 5px;
-  padding: 6px;
-  border:1px solid #0099ff;
+	background: transparent;
+	color: #00438a;
+	border-radius: 4px;
+	margin: 0 5px;
+	padding: 6px;
+	border: 1px solid #0099ff;
 }
+
 .l-btn-plain {
-  background: transparent;
-  border: 1px solid #d0d0d0;
-  filter: none;
-  border-radius: 4px;
-  margin: 0 5px;
-  padding: 6px;
+	background: transparent;
+	border: 1px solid #d0d0d0;
+	filter: none;
+	border-radius: 4px;
+	margin: 0 5px;
+	padding: 6px;
 }
-.datagrid-header, .datagrid-toolbar, .datagrid-pager, .datagrid-footer-inner{
-	border:none;
+
+.datagrid-header,
+.datagrid-toolbar,
+.datagrid-pager,
+.datagrid-footer-inner {
+	border: none;
+}
+
+.datagrid .panel-body,
+.datagrid-body,
+.datagrid-header,
+.datagrid-footer {
+    width: 100% !important;
 }
